# SessionCL

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile  build.sh  configure.sh  install.bash
cmake/: sessioncl.h
sessioncl/: CMakeLists.txt  build.sh  configure.sh
sessioncl/src/: sessioncl.cpp  sessioncl.h.in
sessioncl/src/log/: log.cpp  log.h
sessioncl/src/sessioncl/: ocl2session.cpp  ocl2session.hpp
sessioncl/src/sessioncl/cltypes/: ast.hpp
sessioncl/test/: vectors.cpp
src/: log.cpp  log.h  log.hpp  sessioncl.cpp  sessioncl.h.in
src/log/: log.cpp
test/: multi.cpp
vagrant/: README.md  install.bash
